# doc/swagger/swagger.yaml
@@ -3585,6 +3585,50 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Status_error'  
+  
+  /trends/{REPORT_NAME}/status/metrics/tags:
+    get:
+      summary: List trends by tags for top status service endpoint metrics
+      operationId: trends.StatusMetricsTags
+      description: List top status service endpoint metrics by tags and status events
+      tags:
+        - Trends
+      produces:
+        - "application/json"
+      parameters:
+        - $ref: "#/parameters/profDate"
+        - $ref: "#/parameters/trendsStartDate"
+        - $ref: "#/parameters/trendsEndDate"
+        - $ref: "#/parameters/trendsTop"
+        - $ref: "#/parameters/trendsGran"
+        - $ref: "#/parameters/apiKey"
+        - name: "REPORT_NAME"
+          in: "path"
+          description: "name of the report"
+          required: true
+          type: string
+      responses:
+        '200':
+          description: A list with status trends for metrics by tags
+          schema:
+            $ref: '#/definitions/Trends_status_metrics_tags_list'
+        '401':
+          description: Unauthorized user
+          schema:
+            $ref: '#/definitions/Status_error'
+        '404':
+          description: Item not found
+          schema:
+            $ref: '#/definitions/Status_error'
+        '406':
+          description: Content Not acceptable
+          schema:
+            $ref: '#/definitions/Status_error'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Status_error'    
+  
             
   /trends/{REPORT_NAME}/status/endpoints:
     get:
@@ -5285,6 +5329,8 @@ definitions:
       duration_in_minutes:
         type: integer
         
+  
+        
   Trends_status_endpoints:
     type: object
     properties:
@@ -5399,6 +5445,18 @@ definitions:
         items:
           $ref: '#/definitions/Trends_status_endpoints'
   
+  Trends_status_metrics_tags_group:
+    type: object
+    properties:
+      tag:
+        type: string
+      status:
+        type: string
+      top:
+        type: array
+        items:
+          $ref: '#/definitions/Trends_status_metrics'
+
   
   Trends_status_metrics_group:
     type: object
@@ -5451,7 +5509,16 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/Trends_status_metrics_group'
-  
+
+  Trends_status_metrics_tags_list:
+    type: object
+    properties:
+      status:
+       $ref: '#/definitions/Status'
+      data:
+        type: array
+        items:
+          $ref: '#/definitions/Trends_status_metrics_tags_group'
   
   Trends_metrics_list:
     type: object
